# HPC

./: CMakeLists.txt  main.cpp
HW1/: CMakeLists.txt  main.cpp
HW2/MPI/: CMakeLists.txt  common.cpp  common.h  main.cpp  mpi.cpp
HW2/OpenMP/: Makefile  auto-bridges-openmp16  common.cpp  common.h  openmp.cpp
HW2/Serial/: Makefile  auto-bridges-serial  common.cpp  common.h  serial.cpp  summary
include/: DGEMM.h
src/: DGEMM.cpp
